fix: fix shift in page layout due to scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,4 +4,5 @@
 
 body {
   font-family: Inter, Arial, Helvetica, sans-serif;
+  overflow-y: scroll;
 }
